--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "src/run.js",
   "scripts": {
     "start": "node src/run.js",
-    "start:resetdb" : "FORCE_DB_RESET=true node src/run.js",
-    "seeddata":"node scripts/seed_sampledata.js"
+    "start:resetdb": "FORCE_DB_RESET=true node src/run.js",
+    "seeddata": "node scripts/seed_sampledata.js"
   },
   "author": "Kartik Chauhan",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
     "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
     "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.38.0"
   },
   "devDependencies": {
